--- a/knowledge/frontend/package.json
+++ b/knowledge/frontend/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "liquor-tree": "^0.2.70",
+    "vue": "^2.6.12",
+    "vue-gravatar": "^1.4.1",
+    "vue-mq": "^1.0.1",
+    "vue-router": "^3.5.1",
+    "vue-toasted": "^1.1.28",
+    "vue2-editor": "^2.10.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
